# sdl2-sandbox

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: main.cpp
